[Cocoa] Some WebKitLegacy headers migrated from WebCore incorrectly contain WEBCORE_EXPORT https://bugs.webkit.org/show_bug.cgi?id=136521

Reviewed by Anders Carlsson.

Source/WebCore:

* platform/ios/wak/WebCoreThread.h: Stopped defining WEBCORE_EXPORT.

Source/WebKit/mac:

Taught MigrateHeaders.make to remove WEBCORE_EXPORT from headers using this sed expression:

    s/(^ *)WEBCORE_EXPORT /\1/g

This removes WEBCORE_EXPORT and a single following space character but preserves preceeding whitespace.

* MigrateHeaders.make:

Source/WebKit2:

* config.h: Included <WebCore/PlatformExportMacros.h> instead of defining WEBCORE_EXPORT.

Tools:

* DumpRenderTree/config.h: Included <WebCore/PlatformExportMacros.h> instead of defining WEBCORE_EXPORT.
* TestWebKitAPI/config.h: Ditto.
* WebKitTestRunner/config.h: Ditto.

Canonical link: https://commits.webkit.org/154347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173283 268f45cc-cd09-0410-ab3c-d52691b4dbfc