Source/WebKit2/config.h
@@ -30,12 +30,10 @@
 
 #include <wtf/Platform.h>
 
+#include <WebCore/PlatformExportMacros.h>
 #include <runtime/JSExportMacros.h>
 #include <wtf/DisallowCType.h>
 #include <wtf/ExportMacros.h>
-
-// This is needed because we include WebCore's headers.
-#define WEBCORE_EXPORT
 
 #ifdef __cplusplus
 #ifndef EXTERN_C_BEGIN
