Tools/WebKitTestRunner/config.h
@@ -29,12 +29,10 @@
 #include "cmakeconfig.h"
 #endif
 
+#include <WebCore/PlatformExportMacros.h>
 #include <WebKit/WebKit2_C.h>
 #include <wtf/Platform.h>
 #include <wtf/ExportMacros.h>
 #include <runtime/JSExportMacros.h>
-
-// This is needed because we include WebCore's headers.
-#define WEBCORE_EXPORT
 
 #endif
